--- a/AccountDBUtilities/appsettings.json
+++ b/AccountDBUtilities/appsettings.json
@@ -1,14 +1,13 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=WB-1D1ZF73\\MSSQLSERVERAA;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=account-sql-server,1433;Initial Catalog=AccountingApp;Persist Security Info=True;UID=sa;PWD=Sahil@2014;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=WB-1D1ZF73\\MSSQLSERVERAA;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True",
+    //"DockerConnection": "Server=account-sql-server,1433;Initial Catalog=AccountingApp;Persist Security Info=True;UID=sa;PWD=Sahil@2014;TrustServerCertificate=True"
 
 
     "DefaultConnection": "Data Source=localhost\\account-sql-server,1438;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True",
     "DockerConnection": "Data Source=account-sql-server,1433;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True"
 
-    //"DefaultConnection": "Data Source=WB-1D1ZF73\\MSSQLSERVERAA;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True",
-    //"DockerConnection": "Data Source=account-sql-server,1433;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True"
+    
   },
   "Logging": {
     "LogLevel": {
