--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,27 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "8081:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
     volumes:
       - ./AccountApi:/app/AccountApi
     networks:
       - account-api-network
+
+  testdocker-api:
+    build:
+      #context: ../AccountApi
+      context: .
+      dockerfile: Dockerfile.test
+    ports:
+      - "8082:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+    volumes:
+      - ./TestDockerApi:/app/TestDockerApi
+    networks:
+      - account-api-network    
 
 
   sql-server-database:
