--- a/TransactionApi/TransactionApi.csproj
+++ b/TransactionApi/TransactionApi.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AccountDatabase\AccountDatabase.csproj" />
+  </ItemGroup>
+
 </Project>
