Changes made to interestRate

--- a/TransactionApi/appsettings.json
+++ b/TransactionApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=WB-1D1ZF73\\MSSQLSERVERAA;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True",
-    "DockerConnection": "Server=account-sql-server,1433;Initial Catalog=AccountingApp;Persist Security Info=True;UID=sa;PWD=Sahil@2014;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=WB-1D1ZF73\\MSSQLSERVERAA;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Sahil@2014;TrustServerCertificate=True",
+    //"DockerConnection": "Server=account-sql-server,1433;Initial Catalog=AccountingApp;Persist Security Info=True;UID=sa;PWD=Sahil@2014;TrustServerCertificate=True"
 
 
     "DefaultConnection": "Data Source=WB-43LLWC3;Initial Catalog=AccountingApp;Persist Security Info=True;User ID=sa;Password=Wonderbiz@123;TrustServerCertificate=True"
